modify return data map
